2007-11-21  Naba Kumar  <naba.kumar@gnome.org>

	Icons from tpgww@onepost.net:
	* plugins/symbol-browser/an_symbol_prefs.c:
	* pixmaps/Makefile.am:
	* pixmaps/anjuta.png, pixmaps/anjuta_logo.png, pixmaps/anjuta.svg:

	Icons from patch in bug #480093 comment #23. Also renamed icons.
	To be continued..

2007-11-21  Naba Kumar  <naba.kumar@gnome.org>

	Patch from James Liggett:
	* plugins/subversion/anjuta-subversion.glade: Make commit, resolve,
	revert and dialogs resizable.

2007-11-20  Naba Kumar  <naba.kumar@gnome.org>

	Patch from James Liggett:
	* plugins/subversion/anjuta-subversion.glade:
	* plugins/subversion/subversion-diff-dialog.c:
	(on_subversion_diff_response), (subversion_diff_dialog):
	* plugins/subversion/subversion-diff-dialog.h:

	The diff dialog should have a checkbox, enabled by default, that
	allows the user to make sure that all open files are saved before
	diffing.

2007-11-20  Naba Kumar  <naba.kumar@gnome.org>

	* plugins/Makefile.am: Remove duplicate 'profiler' in SUBDIRS.

	Icons from tpgww@onepost.net:
	* pixmaps/Makefile.am:
	* src/Makefile.am:
	* src/anjuta-app.c:
	* src/anjuta-preferences-general.svg:

	Icons from patch in bug #480093 comment #23. Also renamed icons.
	To be continued..

2007-11-19  Naba Kumar  <naba.kumar@gnome.org>

	Icons from tpgww@onepost.net:
	* plugins/debug-manager/images/Makefile.am:
	* plugins/debug-manager/images/anjuta-watch.svg:
	* plugins/debug-manager/plugin.c: (register_stock_icons):
	* plugins/gdb/images/Makefile.am:
	* plugins/gtodo/Makefile.am:
	* plugins/gtodo/anjuta-gtodo-plugin.svg:
	* plugins/gtodo/anjuta-gtodo.plugin.in:
	* plugins/gtodo/interface.c: (stock_icons):
	* plugins/gtodo/main.h:
	* plugins/gtodo/plugin.c: (ipreferences_merge):
	* plugins/terminal/Makefile.am:
	* plugins/terminal/anjuta-terminal-plugin.svg:
	* plugins/terminal/anjuta-terminal.plugin.in:
	* plugins/terminal/terminal.c:
	* plugins/tools/Makefile.am:
	* plugins/tools/anjuta-tools-plugin.svg: